--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -11,17 +13,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hw3">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".ActivityA"
             android:exported="true"
-            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:showOnLockScreen="true"
+            android:showWhenLocked="true"
+            android:turnScreenOn="true"
             android:theme="@style/Theme.Hw3">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ActivityB"
+            android:exported="false"
+            android:taskAffinity=".TaskBC"
+            android:launchMode="singleTop"
+            android:excludeFromRecents="true"/>
+
+        <activity
+            android:name=".ActivityC"
+            android:exported="false"
+            android:taskAffinity=".TaskBC"
+            android:launchMode="singleTop"
+            android:excludeFromRecents="true"/>
     </application>
 
 </manifest>
